create first prototype

--- a/templates/journal-remote.conf.j2
+++ b/templates/journal-remote.conf.j2
@@ -5,7 +5,7 @@
 
 [Remote]
 Seal=false
-SplitMode=host
+SplitMode={{ journald_server__splitmode }}
 ServerKeyFile=/etc/ssl/certs/wingcon.com.key
 ServerCertificateFile=/etc/ssl/certs/wingcon.com.crt
 # ServerKeyFile=/etc/ssl/private/journal-remote.pem
